<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4D0C8"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="1px"
    android:paddingRight="1px" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="150px"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/spring" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#2E8B57" />

        <EditText
            android:id="@+id/main_date"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#ffffff" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#2E8B57" />

        <ImageView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/spring" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#2E8B57" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_tv_open_count" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#2E8B57" />

        <EditText
            android:id="@+id/main_up_count"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#ffffff" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#2E8B57" />

        <ImageView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/spring" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#2E8B57" />

        <TextView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_tv_clear" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#2E8B57" />

        <ImageView
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/spring" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_com1_test" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_com2_test" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_buzzer_test" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_lcd_test" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_memory_test" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_flash_test" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_sd_test" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_u_test" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_local_mac_test" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_wifi_test" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_4g_test" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_vidio_test" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFAA7F"
            android:text="@string/main_btn_restart_test" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_all_test" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_btn_stress_test" />

        <Button
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFAA7F"
            android:text="@string/main_btn_delete_test" />
        
    </LinearLayout>

</LinearLayout>